<resources>
    <string name="app_name">MyStudiez</string>
    <string name="action_settings">Settings</string>
    <string name="subjects_title">Subjects</string>
    <string name="lessons_title">Subject details</string>
    <string name="tasks_title">Tasks</string>
    <string name="exams_title">Exams</string>
    <string name="overview_title">Overview</string>
    <string name="details_title">Details</string>
    <string name="details_subject_title">Subject:</string>
    <string name="details_teacher_name">Teacher:</string>
    <string name="details_colorcode">Color:</string>
    <string name="details_edit_button">Edit details</string>
    <string name="subject_indicator_description">The color of the subject the user selected.</string>
    <string name="sli_day_monday">M</string>
    <string name="sli_day_tuesday">T</string>
    <string name="sli_day_wednesday">W</string>
    <string name="sli_day_thursday">T</string>
    <string name="sli_day_friday">F</string>
    <string name="sli_day_saturday">S</string>
    <string name="sli_day_sunday">S</string>
    <string name="subject_details_lessons_title">Lessons</string>
    <string name="bottom_nav_subjects_title">Subjects</string>
    <string name="bottom_nav_tasks_title">Tasks</string>
    <string name="bottom_nav_exams_title">Exams</string>
    <string name="details_subject_item_time">%s - %s</string>
    <string name="tasks_recycler_empty">No tasks</string>
    <string name="no_task_img_description">An illustration that describes that there are no Tasks</string>
    <string name="exams_recycler_empty">No exams</string>
    <string name="no_exam_img_description">An illustration that describes that there are no Exams</string>
    <string name="lessons_recycler_empty">No lessons</string>
    <string name="no_lesson_img_description">An illustration that describes that there are no Lessons</string>
    <string name="subjects_recycler_empty">No subjects\n Press the + button to add new</string>
    <string name="no_subject_img_description">An illustration that describes that there are no Subjects</string>
    <string name="new_subject_activity_title">New subject</string>
    <string name="new_subject_details">Details</string>
    <string name="new_subject_name_title">Name:</string>
    <string name="new_subject_teacher_title">Teacher:</string>
    <string name="new_subject_colorcode_title">Color:</string>
    <string name="new_subject_name_hint">Subject\'s name</string>
    <string name="new_subject_teacher_hint">Subject\'s teacher</string>
    <string name="new_subject_color_button">Select color</string>
    <string name="new_subject_save_btn">Save changes</string>
    <string name="selected_color_circle_description">The color selected by the user for the subject</string>

    <string name="add_new_subject_title">Add new subject</string>
    <string name="edit_subject_title">Edit %s</string>
    <string name="colorRedTitle">Red</string>
    <string name="colorPinkTitle">Pink</string>
    <string name="colorPurpleTitle">Purple</string>
    <string name="colorDeepPurpleTitle">Deep purple</string>
    <string name="colorIndigoTitle">Indigo</string>
    <string name="colorBlueTitle">Blue</string>
    <string name="colorLightBlueTitle">Light blue</string>
    <string name="colorCyanTitle">Cyan</string>
    <string name="colorTealTitle">Teal</string>
    <string name="colorGreenTitle">Green</string>
    <string name="colorLightGreenTitle">Light green</string>
    <string name="colorLimeTitle">Lime</string>
    <string name="colorYellowTitle">Yellow</string>
    <string name="colorAmberTitle">Amber</string>
    <string name="colorOrangeTitle">Orange</string>
    <string name="colorDeepOrangeTitle">Deep orange</string>
    <string name="colorBlueGrayTitle">Blue gray</string>
    <string name="details_del_button">Delete subject</string>
    <string name="add_edit_lesson_day_title">Select day:</string>
    <string name="add_edit_lesson_starts_at">Starts at:</string>
    <string name="add_edit_lesson_ends_at">Ends at:</string>
    <string name="add_edit_lesson_location">Location:</string>
    <string name="add_edit_lesson_location_value">Enter location</string>
    <string name="add_edit_lesson_btn">Tap to select</string>
    <string name="add_new_lesson_title">Add new lesson</string>
    <string name="edit_lesson_title">Edit %s lesson</string>
    <string name="no_lesson_add_lesson_btn_title">Add new lesson</string>
    <string name="dayOptionMonday">Monday</string>
    <string name="dayOptionTuesday">Tuesday</string>
    <string name="dayOptionWednesday">Wednesday</string>
    <string name="dayOptionThursday">Thursday</string>
    <string name="dayOptionFriday">Friday</string>
    <string name="dayOptionSaturday">Saturday</string>
    <string name="dayOptionSunday">Sunday</string>
    <string name="details_lesson_name">Name: </string>
    <string name="details_lesson_starts_at">Starts at:</string>
    <string name="details_lesson_ends_at">Ends at:</string>
    <string name="lesson_details_edit_button">Edit lesson</string>
    <string name="lesson_details_del_button">Delete lesson</string>
    <string name="details_lesson_location">Location:</string>
    <string name="no_task_add_lesson_btn_title">Add new task</string>
    <string name="add_edit_task_type_title">Type:</string>
    <string name="add_edit_task_subject_title">Subject:</string>
    <string name="add_edit_task_due_date_title">Due date:</string>
    <string name="add_edit_task_name_value">Enter name</string>
    <string name="add_edit_task_name">Name:</string>
    <string name="add_edit_task_desc">Description:</string>
    <string name="add_edit_task_desc_value">Enter description</string>
    <string name="add_edit_task_reminder_title">Reminder:</string>
    <string name="add_new_task_title">Add new task</string>
    <string name="taskTypeAssignment">Assignment</string>
    <string name="taskTypeRevision">Revision</string>
    <string name="task_details_del_button">Delete task</string>
    <string name="task_details_edit_button">Edit task</string>
    <string name="lesson_details_title">Lesson details</string>
    <string name="task_details_title">Task details</string>
    <string name="add_edit_exam_name">Name:</string>
    <string name="add_new_exam_title">Add new exam</string>
    <string name="no_exam_add_exam_btn_title">Add new exam</string>
    <string name="exam_details_edit_button">Edit exam</string>
    <string name="exam_details_del_button">Delete exam</string>
    <string name="exam_details_title">Exam details</string>
    <string name="add_edit_exam_date_title">Date:</string>
    <string name="tasks_any_recycler_empty">No tasks\n Press the + button to add new</string>
    <string name="exams_any_recycler_empty">No exams\n Press the + button to add new</string>
    <string name="required_fields_are_not_filled">You must fill in all required fields.</string>
    <string name="schedule_title">Schedule</string>
    <string name="bottom_nav_overview_title">Overview</string>
    <string name="overview_date_title">Selected day:</string>
    <string name="tasks_recycler_empty_overview">No tasks due to this day</string>
    <string name="exams_recycler_empty_overview">No exams on this day</string>
    <string name="lessons_recycler_empty_overview">No lessons on this day.</string>
    <string name="notification_task_reminder_title">Task reminder</string>
    <string name="notification_exam_reminder_title">Exam reminder</string>
    <string name="overview_day_description">Date (Tap to change):</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="did_not_change">You did not make any changes</string>
    <string name="no_subjects_to_select_from">No subjects to select from</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bottomnav_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="firebase_error">There was en error while getting data from database</string>
    <string name="firebase_user_logged_in">User logged in</string>
    <string name="firebase_user_logged_out">Please log in</string>
    <string name="changes_dialog_title">You have unsaved changes. Do you want to continue?</string>
    <string name="changes_dialog_continue">Continue</string>
    <string name="changes_dialog_back">Back</string>
</resources>
