<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    android:backgroundTint="@color/colorBackgroundPrimary"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddEditSubjectActivity"
    tools:showIn="@layout/activity_add_edit_subject">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorBackgroundPrimary"
        android:backgroundTint="@color/colorBackgroundPrimary"
        android:paddingTop="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/new_subject_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/new_subject_name_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/new_subject_teacher_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/new_subject_teacher_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_subject_name_title" />

        <TextView
            android:id="@+id/new_subject_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/new_subject_colorcode_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_subject_teacher_title" />

        <EditText
            android:id="@+id/new_subject_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/new_subject_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_subject_name_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_subject_name_title" />

        <EditText
            android:id="@+id/new_subject_teacher_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/new_subject_teacher_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_subject_teacher_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/new_subject_name_value" />

        <Button
            android:id="@+id/new_subject_color_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/circular_button"
            android:fontFamily="@font/roboto_bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/new_subject_color_button"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_subject_color_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/selectedColor" />

        <Button
            android:id="@+id/new_subject_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/circular_button"
            android:fontFamily="@font/roboto_bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/new_subject_save_btn"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_subject_color_title" />

        <ImageView
            android:id="@+id/selectedColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/selected_color_circle_description"
            app:layout_constraintBottom_toBottomOf="@+id/new_subject_color_title"
            app:layout_constraintStart_toStartOf="@+id/new_subject_teacher_value"
            app:srcCompat="@drawable/placeholder_circle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
